Enable predicate pushdown for Hive profile when accessing Parquet backed tables (#480)

--- a/server/pxf-service/src/templates/user/templates/pxf-site.xml
+++ b/server/pxf-service/src/templates/user/templates/pxf-site.xml
@@ -47,4 +47,11 @@
         </description>
     </property>
     !-->
+
+    <property>
+        <name>pxf.ppd.hive</name>
+        <value>true</value>
+        <description>Specifies whether Predicate Pushdown feature is enabled for Hive profiles.</description>
+    </property>
+
 </configuration>
